--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/node": "^16.18.41",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -42,6 +44,10 @@
     ]
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.6",
+    "@types/react-bootstrap": "^0.32.32",
+    "react-bootstrap": "^2.8.0",
+    "react-router-dom": "^6.15.0",
     "tailwindcss": "^3.3.3"
   }
 }
